--- a/generic.html
+++ b/generic.html
@@ -32,18 +32,18 @@
 							<h1 class="major">Scaling Sales Enablement to Drive Revenue Success at Shopify</h1>
 							<span class="image fit"><img src="images/pic01.png" alt="" /></span>
 							<p><h3>Background</h3>
-								<p> At Shopify, I was tasked with scaling sales enablement programs to support the growing needs of our global revenue teams, including Solution Engineers, Launch Consultants, and Customer Success teams.As part of a company-wide initiative to enhance understanding and engagement with incentive compensation plans, I was tasked with designing and rolling out training programs. The challenge was ensuring the content resonated with diverse audiences, from individual contributors to executives, while aligning with revenue operations, HR, and finance strategies.</p>
+								<p> At Shopify, I was tasked with scaling sales enablement programs with tooling to support the growing needs of our global revenue teams, including Solution Engineers, Launch Consultants, and Customer Success teams. The challenge was ensuring the content resonated with diverse audiences, from individual contributors to executives, while aligning with revenue operations, HR, and finance strategies.</p>
 								
 								<h3>Project goals</h3>
 								<ol>
-									<li>Scale sales enablement programs to support the growth of global revenue teams, including Solution Engineers, Launch Consultants, and Customer Success teams.</li>
+									<li>Scale sales enablement programs with tooling and logistical support to support the growth of global revenue teams, including Solution Engineers, Launch Consultants, and Customer Success teams.</li>
 									<li>Formalize and expand knowledge-sharing efforts using a scalable platform to ensure consistency and effectiveness.</li>
 									<li>Align enablement initiatives with Shopify’s GTM priorities, product launches, and service offerings.</li>
 									<li>Empower revenue teams to articulate value propositions effectively and improve customer interactions.</li>
 								</ol>
 								<h3>My Tasks</h3>
 								<ol>
-									<li>Partnered with cross-functional teams (Product, Revenue Operations, and Customer Success) to align enablement efforts with GTM strategies and key business priorities.</li>
+									<li>Partnered with cross-functional learning teams (Product, Revenue Operations, and Customer Success) to align enablement efforts with GTM strategies and key business priorities.</li>
 									<li>Gathered and analyzed data from platform usage and participant feedback to refine learning materials and continuously improve program effectiveness.</li>
 									<li>Scalable Sales Enablement: PlusPlus supported synchronous training across Shopify’s growing global revenue organization and time zones.</li>
 									<li>Collected feedback and data to ensure continuous improvement.</li>
