--- a/generic.html
+++ b/generic.html
@@ -51,7 +51,7 @@
 								<h3>Impact</h3>
 								<p>The initiative had several key outcomes:</p>
 									<li>Revenue Growth: Increased confidence and preparedness among sales teams led to faster time-to-productivity for new hires and stronger customer engagement.</li>
-									<li><strong>Scalable Learning Ecosystem</strong>: PlusPlus enabled Shopify to scale peer-to-peer learning efficiently, meeting the needs of both engineers and non-engineers.</li>
+									<li>Scalable Learning Ecosystem: PlusPlus enabled Shopify to scale peer-to-peer learning efficiently, meeting the needs of both engineers and non-engineers.</li>
 									<li>Enhanced Engagement: Fostered a culture of knowledge sharing and continuous learning, driving alignment and retention across revenue teams.</li>
 									<li>Data-Driven Decisions: Usage data identified impactful learning topics, ensuring the program remained aligned with revenue and GTM goals</li>
 								</ol></p>
