--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <!-- Image Section -->
         <div class="image-section" style="float: right; margin-top: -80px;">
-            <img src="images/contact-image.png" alt="Contact" style="max-width: 200px; border-radius: 10px;">
+            <img src="images/haideethanda.jpg" alt="Contact" style="max-width: 200px; border-radius: 10px;">
         </div>
     </div>
 </section>
