--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 
         <!-- Image Section -->
         <div class="image-section" style="float: right; margin-top: -80px;">
-            <img src="images/haideethanda.jpg" alt="Contact" style="max-width: 200px; border-radius: 10px;">
+     <img src="images/haideethanda.jpg" alt="Contact" style="width: 400px; height: 400px; border-radius: 10px;">
         </div>
     </div>
-</section>
+</section>        
 			</div>
 
 		<!-- Footer -->
