--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Haidee Thanda. Coded With Code in 2024.
+						<li>&copy; Haidee Thanda 2024.
 					</ul>
 				</div>
 			</footer>
