--- a/index.html
+++ b/index.html
@@ -128,33 +128,39 @@
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
-    <div class="inner">
+   <div class="inner">
     <h2>Get in touch</h2>
-    <div class="split style1">
-        <p>I'd love to hear from you.</p>
-    </div>
+    <table style="width: 100%; border-collapse: collapse;">
+        <tr>
+            <!-- Contact Information Column -->
+            <td style="vertical-align: top; padding-right: 20px;">
+                <div class="split style1">
+                    <p>I'd love to hear from you.</p>
+                </div>
+                <ul class="contact">
+                    <li>
+                        <h3>Email</h3>
+                        <a href="mailto:haidee.thanda@gmail.com">haidee.thanda@gmail.com</a>
+                    </li>
+                    <li>
+                        <h3>Social Media</h3>
+                        <ul class="icons">
+                            <li>
+                                <a href="https://www.linkedin.com/in/haideethanda/" class="icon brands fa-linkedin-in" target="_blank">
+                                    <span class="label">Visit Haidee Thanda's LinkedIn Profile</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </td>
 
-    <ul class="contact">
-        <li>
-            <h3>Email</h3>
-            <a href="mailto:haidee.thanda@gmail.com">haidee.thanda@gmail.com</a>
-        </li>
-        <li>
-            <h3>Social Media</h3>
-            <ul class="icons">
-                <li>
-                    <a href="https://www.linkedin.com/in/haideethanda/" class="icon brands fa-linkedin-in" target="_blank">
-                        <span class="label">Visit Haidee Thanda's LinkedIn Profile</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-    </ul>
-
-    <!-- Image Section -->
-    <div class="image-section">
-        <img src="images/haideethanda.jpg" alt="Photo of Haidee Thanda" style="width: 400px; height: 400px; border-radius: 10px;">
-    </div>
+            <!-- Image Column -->
+            <td style="vertical-align: top; text-align: right;">
+                <img src="images/haideethanda.jpg" alt="Photo of Haidee Thanda" style="width: 400px; height: 400px; border-radius: 10px;">
+            </td>
+        </tr>
+    </table>
 </div>
 
 </section>
