--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<section id="three" class="wrapper style1 fade-up">
    <div class="inner">
     <h2>Get in touch</h2>
-    <table style="width: 100%; border-collapse: collapse;">
+    <table>
         <tr>
             <!-- Contact Information Column -->
             <td style="vertical-align: top; padding-right: 0px;">
