--- a/index.html
+++ b/index.html
@@ -128,41 +128,26 @@
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
-   <div class="inner">
+<div>
     <h2>Get in touch</h2>
-    <table>
+    <table style="width: 100%; border-collapse: collapse;">
         <tr>
             <!-- Contact Information Column -->
-            <td>
-                <div class="split style1">
-                    <p>I'd love to hear from you.</p>
-                </div>
-                <ul class="contact">
-                    <li>
-                        <h3>Email</h3>
-                        <a href="mailto:haidee.thanda@gmail.com">haidee.thanda@gmail.com</a>
-                    </li>
-                    <li>
-                        <h3>Social Media</h3>
-                        <ul class="icons">
-                            <li>
-                                <a href="https://www.linkedin.com/in/haideethanda/" class="icon brands fa-linkedin-in" target="_blank">
-                                    <span class="label">Visit Haidee Thanda's LinkedIn Profile</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+            <td style="vertical-align: top; padding-right: 20px; width: 60%;">
+                <p>I'd love to hear from you.</p>
+                <h3>Email</h3>
+                <a href="mailto:haidee.thanda@gmail.com">haidee.thanda@gmail.com</a>
+                <h3>Social Media</h3>
+                <a href="https://www.linkedin.com/in/haideethanda/" target="_blank">Visit LinkedIn Profile</a>
             </td>
 
             <!-- Image Column -->
-            <td>
-                <img src="images/haideethanda.jpg" alt="Photo of Haidee Thanda" style="width: 400px; height: 400px; border-radius: 0px;">
+            <td style="vertical-align: top; text-align: right; width: 40%;">
+                <img src="images/haideethanda.jpg" alt="Photo of Haidee Thanda" style="width: 400px; height: 400px;">
             </td>
         </tr>
     </table>
 </div>
-
 </section>
 
 		<!-- Footer -->
