--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
-<div>
+<div class="inner">
     <h2>Get in touch</h2>
     <table style="width: 100%; border-collapse: collapse;">
         <tr>
