--- a/index.html
+++ b/index.html
@@ -134,13 +134,9 @@
         <tr>
             <!-- Contact Information Column -->
             <td style="vertical-align: top; padding-right: 20px; width: 60%;">
-                <p>I'd love to hear from you.</p>
-                <h3>Email</h3>
-                <a href="mailto:haidee.thanda@gmail.com">haidee.thanda@gmail.com</a>
-                <h3>Social Media</h3>
-                <a href="https://www.linkedin.com/in/haideethanda/" target="_blank">Visit LinkedIn Profile</a>
+                <p>I'd love to hear from you.</p> <a href="mailto:haidee.thanda@gmail.com">haidee.thanda@gmail.com</a>
+                <p><a href="https://www.linkedin.com/in/haideethanda/" target="_blank">LinkedIn Profile</a></p>
             </td>
-
             <!-- Image Column -->
             <td style="vertical-align: top; text-align: right; width: 40%;">
                 <img src="images/haideethanda.jpg" alt="Photo of Haidee Thanda" style="width: 400px; height: 400px;">
